--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 PORT=9292
 CACHE_TTL_SECONDS=60
 MEMCACHIER_SERVERS=localhost:11211
+CACHE_TTL_SECONDS=86400
 UNICORN_TIMEOUT=30
 UNICORN_WORKERS=1
 UNICORN_THREADS=10
 UNICORN_KEEPALIVE=20
+YARP_FILECACHE_PATH=tmp/cache
+YARP_FILECACHE_MAX_BYTES=100000000
