Adds filesystem caching

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 PORT=9292
-CACHE_TTL_SECONDS=60
 MEMCACHIER_SERVERS=localhost:11211
 CACHE_TTL_SECONDS=86400
 UNICORN_TIMEOUT=30
@@ -8,3 +7,4 @@ UNICORN_THREADS=10
 UNICORN_KEEPALIVE=20
 YARP_FILECACHE_PATH=tmp/cache
 YARP_FILECACHE_MAX_BYTES=100000000
+YARP_CACHE_THRESHOLD=100000
