Pow compatibility, better README and defaults

--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
-PORT=9292
 MEMCACHIER_SERVERS=localhost:11211
-CACHE_TTL_SECONDS=86400
-UNICORN_TIMEOUT=30
-UNICORN_WORKERS=1
-UNICORN_THREADS=10
+PORT=9292
 UNICORN_KEEPALIVE=20
+UNICORN_THREADS=10
+UNICORN_TIMEOUT=30
+UNICORN_WORKERS=2
+YARP_CACHE_THRESHOLD=50000
+YARP_CACHE_TTL=86400
+YARP_FILECACHE_MAX_BYTES=250000000
 YARP_FILECACHE_PATH=tmp/cache
-YARP_FILECACHE_MAX_BYTES=100000000
-YARP_CACHE_THRESHOLD=100000
+YARP_LARGE_CACHE=file
+YARP_SMALL_CACHE=memcache
+YARP_UPSTREAM=http://eu.yarp.io
