Documents config file

--- a/.env
+++ b/.env
@@ -1,13 +1,38 @@
+# -*- bash -*-
+#
+# .env --
+#   Configuration for Yarp.
+#   Will not work if these valirable are not present in the environment.
+#
+
+# If a request is smaller than 50 kiB, store it it the "small" cache
+# (memcached by default), else in the "large" cache (filesystem by default)
+YARP_CACHE_THRESHOLD=50000
+YARP_LARGE_CACHE=file
+YARP_SMALL_CACHE=memcache
+
+# Cache for a day
+YARP_CACHE_TTL=86400
+
+# Limit the filesystem cache to 250 MiB
+YARP_FILECACHE_MAX_BYTES=250000000
+
+# Directory hosting the filesystem cache
+YARP_FILECACHE_PATH=tmp/cache
+
+# Where to redirect/fetch from. this can be another instance of Yarp, or
+# Rubygems.
+YARP_UPSTREAM=http://eu.yarp.io
+
+# Comma-separated list of host:port entries
 MEMCACHIER_SERVERS=localhost:11211
+
+# The port on which to run the Rack application
 PORT=9292
+
+# The following only apply if you run Unicorn locally
+# not if running Pow or Rackup directly
 UNICORN_KEEPALIVE=20
 UNICORN_THREADS=10
 UNICORN_TIMEOUT=30
 UNICORN_WORKERS=2
-YARP_CACHE_THRESHOLD=50000
-YARP_CACHE_TTL=86400
-YARP_FILECACHE_MAX_BYTES=250000000
-YARP_FILECACHE_PATH=tmp/cache
-YARP_LARGE_CACHE=file
-YARP_SMALL_CACHE=memcache
-YARP_UPSTREAM=http://eu.yarp.io
