--- a/.powrc
+++ b/.powrc
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 while read LINE ; do
+  test -n "${LINE%#*}" || continue
   echo "$LINE"
-  # eval "$LINE"
   eval "export '$LINE'"
 done < .env
