Added s3 to the example env file

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,7 @@ UNICORN_KEEPALIVE=20
 UNICORN_THREADS=10
 UNICORN_TIMEOUT=30
 UNICORN_WORKERS=2
+
+AWS_ACCESS_KEY_ID=access
+AWS_SECRET_ACCESS_KEY=secret
+AWS_BUCKET_NAME=bucket
