--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: ruby
 rvm:
   - "2.0.0"
 script: bundle exec rspec spec
+env:
+  - YARP_UPSTREAM=http://eu.yarp.io
+  - MEMCACHIER_SERVERS=localhost:11211
