--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 rvm:
   - "2.0.0"
 script: bundle exec rspec spec
+services:
+  - memcached
 env:
   - YARP_UPSTREAM=http://eu.yarp.io
   - MEMCACHIER_SERVERS=localhost:11211
