add commented optional upstream user/pass env variables

--- a/.env
+++ b/.env
@@ -23,6 +23,9 @@ YARP_FILECACHE_PATH=tmp/cache
 # Where to redirect/fetch from. this can be another instance of Yarp, or
 # Rubygems.
 YARP_UPSTREAM=http://eu.yarp.io
+# Optional HTTP Basic Auth credentials for upstream.
+# YARP_UPSTREAM_USER=username
+# YARP_UPSTREAM_PASS=password
 
 # Comma-separated list of host:port entries
 MEMCACHIER_SERVERS=localhost:11211
