Get working under 2.6.3 ruby
Some cleanup combined with getting it working under 2.6.3 ruby.

--- a/.env
+++ b/.env
@@ -22,17 +22,10 @@ YARP_FILECACHE_PATH=tmp/cache
 
 # Where to redirect/fetch from. this can be another instance of Yarp, or
 # Rubygems.
-YARP_UPSTREAM=http://eu.yarp.io
+YARP_UPSTREAM=https://rubygems.org
 
 # Comma-separated list of host:port entries
 MEMCACHIER_SERVERS=localhost:11211
 
 # The port on which to run the Rack application
-PORT=24591
-
-# The following only apply if you run Unicorn locally
-# not if running Pow or Rackup directly
-UNICORN_KEEPALIVE=20
-UNICORN_THREADS=10
-UNICORN_TIMEOUT=30
-UNICORN_WORKERS=2
+PORT=8080
